--- a/index.html
+++ b/index.html
@@ -1,33 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
-    <!-- Fontawesome cdn -->
-    
-    <!-- tailwind cdn -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- DaisyUi cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <!-- Custom font style -->
-     <style>
 
-     </style>
-     <!-- Custom color -->
-     <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              clifford: '#da373d',
-            }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Demo</title>
+  <!-- Fontawesome cdn -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!-- tailwind cdn -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- DaisyUi cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <!-- Custom font style -->
+  <style>
+    .font-garamond {
+      font-family: "EB Garamond", serif;
+    }
+    .font-poppins{
+      font-family: "Poppins", serif;
+    }
+  </style>
+  <!-- Custom color -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'txt-primary':'rgb(112, 112, 112)',
+            'txt-primary-b':'rgb(231, 231, 231)',
+            'fill-primary':'rgb(182, 140, 90)',
+            'fill-overlay':'rgb(17, 17, 17)',
+            'fill-overlay1':'rgba(17, 17, 17, 0)',
           }
         }
       }
-    </script>
+    }
+  </script>
 </head>
-<body>
-    
+
+<body class="font-garamond">
+  `<!-- header section -->
+  <header class="md:container px-5 md:px-32 mx-auto">
+
+    <!-- navbar section -->
+    <nav>
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow text-txt-primary font-semibold">
+              <li><a>Home</a></li>
+              <li><a>Services</a></li>
+              <li><a>Cases</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact Us</a></li>
+            </ul>
+          </div>
+          <a href=""><img src="images/logo2.png" alt="logo"></a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-txt-primary font-semibold">
+            <li><a>Home</a></li>
+            <li><a>Services <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                </svg>
+              </a></li>
+            <li><a>Cases <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                </svg>
+              </a></li>
+            <li><a>Blog <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                </svg>
+              </a></li>
+            <li><a>Contact Us <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                </svg>
+              </a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn bg-fill-primary font-poppins h-14 px-7 text-white hover:text-black">Free Consultation</a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero section -->
+    <div
+    class="hero h-1/6 mt-14"
+    style="background-image: url(images/banner.png);">
+    <div class="hero-overlay bg-gradient-to-t from-fill-overlay to-fill-overlay1 opacity-40"></div>
+    <div class="hero-content text-neutral-content text-center lg:p-36">
+      <div class="max-w-xl">
+        <h1 class="mb-5 text-6xl text-white font-bold">We Provide Effective Legal Solutions</h1>
+        <p class="my-6 text-txt-primary-b font-poppins">
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+        </p>
+        <div class="lg:flex items-center">
+          <input type="text" placeholder="Search your services" class="input input-bordered w-full max-w-md text-gray-500 font-semibold mr-3 font-poppins py-7" /><button class="btn bg-fill-primary text-white font-poppins border-none h-14 px-5 text-xl hover:text-black mt-3 lg:mt-0">Search</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </header>
+
+  <!-- main section -->
+  <main class="md:container mx-auto">
+
+  </main>
+
+  <!-- footer section -->
+  <footer>
+
+  </footer>
 </body>
+
 </html>
