--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body class="font-garamond">
   `<!-- header section -->
-  <header class="md:container px-5 md:px-32 mx-auto">
+  <header class="md:container px-5 lg:px-32 mx-auto">
 
     <!-- navbar section -->
     <nav>
