complete legal section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             clifford: '#da373d',
             'txt-primary':'rgb(112, 112, 112)',
             'txt-primary-b':'rgb(231, 231, 231)',
+            'txt-primary-c':'rgb(65, 64, 64)',
             'fill-primary':'rgb(182, 140, 90)',
             'fill-overlay':'rgb(17, 17, 17)',
             'fill-overlay1':'rgba(17, 17, 17, 0)',
@@ -117,8 +118,141 @@
   </header>
 
   <!-- main section -->
-  <main class="md:container mx-auto">
+  <main class="md:container mx-auto mt-32 lg:px-32">
 
+    <!-- legal practice section -->
+    <section class="mb-32">
+      <!-- text content -->
+      <div class="text-center max-w-3xl mx-auto">
+        <h2 class="font-bold text-5xl capitalize text-txt-primary-c">The legal practice area</h2>
+        <p class="font-poppins mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      </div>
+
+      <!-- legal area cards -->
+       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-0 place-items-center mt-10">
+        <!-- card - 1 -->
+        <div class="card bg-base-100 max-w-[426px] border lg:border-t-0 lg:border-l-0 rounded-none">
+          <figure class="px-10 pt-10">
+            <img
+              src="images/business.png"
+              alt="Shoes"
+              class="" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <button class="btn btn-circle bg-fill-primary text-white mt-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- card - 2 -->
+        <div class="card bg-base-100 max-w-[426px] border lg:border-t-0 lg:border-b-0 lg:border-l-0 rounded-none bg-gradient-to-b from-gray-100 to-white">
+          <figure class="px-10 pt-10">
+            <img
+              src="images/business.png"
+              alt="Shoes"
+              class="" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <button class="btn btn-circle bg-fill-primary text-white mt-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- card - 3 -->
+        <div class="card bg-base-100 max-w-[426px] border lg:border-r-0 lg:border-t-0 lg:border-l-0 rounded-none">
+          <figure class="px-10 pt-10">
+            <img
+              src="images/business.png"
+              alt="Shoes"
+              class="" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <button class="btn btn-circle bg-fill-primary text-white mt-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- card - 4 -->
+        <div class="card bg-base-100 max-w-[426px] border lg:border-0 rounded-none">
+          <figure class="px-10 pt-10">
+            <img
+              src="images/business.png"
+              alt="Shoes"
+              class="" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <button class="btn btn-circle bg-fill-primary text-white mt-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- card - 5 -->
+        <div class="card bg-base-100 max-w-[426px] border lg:border-b-0 rounded-none">
+          <figure class="px-10 pt-10">
+            <img
+              src="images/business.png"
+              alt="Shoes"
+              class="" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <button class="btn btn-circle bg-fill-primary text-white mt-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- card - 6 -->
+        <div class="card bg-base-100 max-w-[426px] border lg:border-0 rounded-none">
+          <figure class="px-10 pt-10">
+            <img
+              src="images/business.png"
+              alt="Shoes"
+              class="" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <button class="btn btn-circle bg-fill-primary text-white mt-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+       </div>
+    </section>
+    
   </main>
 
   <!-- footer section -->
