complete legal section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </header>
 
   <!-- main section -->
-  <main class="md:container mx-auto mt-32 lg:px-32">
+  <main class="md:container px-5 mx-auto mt-32 lg:px-32">
 
     <!-- legal practice section -->
     <section class="mb-32">
@@ -151,15 +151,15 @@
           </div>
         </div>
         <!-- card - 2 -->
-        <div class="card bg-base-100 max-w-[426px] border lg:border-t-0 lg:border-b-0 lg:border-l-0 rounded-none bg-gradient-to-b from-gray-100 to-white">
+        <div class="card bg-base-100 max-w-[426px] border lg:border-t-0 lg:border-b-0 lg:border-l-0 rounded-none lg:bg-gradient-to-b from-gray-100 to-white">
           <figure class="px-10 pt-10">
             <img
-              src="images/business.png"
+              src="images/criminal.png"
               alt="Shoes"
               class="" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Criminal Law</h2>
             <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
               <button class="btn btn-circle bg-fill-primary text-white mt-6">
@@ -174,12 +174,12 @@
         <div class="card bg-base-100 max-w-[426px] border lg:border-r-0 lg:border-t-0 lg:border-l-0 rounded-none">
           <figure class="px-10 pt-10">
             <img
-              src="images/business.png"
+              src="images/child.png"
               alt="Shoes"
               class="" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Child Support</h2>
             <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
               <button class="btn btn-circle bg-fill-primary text-white mt-6">
@@ -194,12 +194,12 @@
         <div class="card bg-base-100 max-w-[426px] border lg:border-0 rounded-none">
           <figure class="px-10 pt-10">
             <img
-              src="images/business.png"
+              src="images/education.png"
               alt="Shoes"
               class="" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Education Law</h2>
             <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
               <button class="btn btn-circle bg-fill-primary text-white mt-6">
@@ -214,12 +214,12 @@
         <div class="card bg-base-100 max-w-[426px] border lg:border-b-0 rounded-none">
           <figure class="px-10 pt-10">
             <img
-              src="images/business.png"
+              src="images/divorce.png"
               alt="Shoes"
               class="" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Divorce Law</h2>
             <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
               <button class="btn btn-circle bg-fill-primary text-white mt-6">
@@ -234,12 +234,12 @@
         <div class="card bg-base-100 max-w-[426px] border lg:border-0 rounded-none">
           <figure class="px-10 pt-10">
             <img
-              src="images/business.png"
+              src="images/tax.png"
               alt="Shoes"
               class="" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Business Law</h2>
+            <h2 class="card-title text-3xl text-txt-primary-c mt-6">Tax Law</h2>
             <p class="font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
               <button class="btn btn-circle bg-fill-primary text-white mt-6">
