complete review section

--- a/index.html
+++ b/index.html
@@ -253,6 +253,116 @@
        </div>
     </section>
     
+    <!-- client review section -->
+     <section class="mb-32">
+
+      <!-- text content -->
+      <div class="max-w-3xl text-center mx-auto mb-10">
+        <h2 class="text-5xl font-bold text-txt-primary-c mb-5">What Our Client Say</h2>
+        <p class="font-poppins text-lg">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      </div>
+
+      <!-- curousel/slider content -->
+      <div class="carousel w-full relative">
+
+        <!-- slider - 1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="overflow-hidden">
+            <div class="bg-black w-full h-full opacity-40 absolute"></div>
+            <div class="absolute flex justify-center items-center text-white flex-col text-center top-5 lg:top-36">
+                <div class="avatar">
+                  <div class="ring-offset-base-100 w-20 rounded-full ring ring-offset-4 mb-5">
+                    <img src="https://img.freepik.com/free-photo/portrait-expressive-young-man-wearing-formal-suit_273609-6942.jpg" />
+                  </div>
+                </div>
+              <h3 class="font-bold text-2xl">Awlad Hossain</h3>
+              <span class="mb-6 font-poppins text-txt-primary-b">UIX Designer</span>
+              <p class="lg:px-28 font-poppins text-txt-primary-b">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+            </div>
+            <div class="absolute bottom-10 left-[46%] flex">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-white">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-txt-primary">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-txt-primary">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>                                          
+            </div>          
+            <img src="images/slider-1.jpg" class="w-fit h-fit" />
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle bg-transparent border-none text-white text-2xl hover:bg-transparent">❮</a> 
+            <a href="#slide2" class="btn btn-circle bg-transparent border-none text-white text-2xl hover:bg-transparent">❯</a>
+          </div>
+        </div>
+        <!-- slider - 2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="overflow-hidden">
+            <div class="bg-black w-full h-full opacity-40 absolute"></div>
+            <div class="absolute flex justify-center items-center text-white flex-col text-center top-5 lg:top-36">
+                <div class="avatar">
+                  <div class="ring-offset-base-100 w-20 rounded-full ring ring-offset-4 mb-5">
+                    <img src="https://img.freepik.com/free-photo/portrait-expressive-young-man-wearing-formal-suit_273609-6942.jpg" />
+                  </div>
+                </div>
+              <h3 class="font-bold text-2xl">Awlad Hossain</h3>
+              <span class="mb-6 font-poppins text-txt-primary-b">UIX Designer</span>
+              <p class="lg:px-28 font-poppins text-txt-primary-b">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+            </div>
+            <div class="absolute bottom-10 left-[46%] flex">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-txt-primary">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-white">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-txt-primary">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>                                          
+            </div>            
+            <img src="images/slider-2.jpg" class="w-fit h-fit" />
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle bg-transparent border-none text-white text-2xl hover:bg-transparent">❮</a> 
+            <a href="#slide3" class="btn btn-circle bg-transparent border-none text-white text-2xl hover:bg-transparent">❯</a>
+          </div>
+        </div>
+        <!-- slider - 3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="overflow-hidden">
+            <div class="bg-black w-full h-full opacity-40 absolute"></div>
+            <div class="absolute flex justify-center items-center text-white flex-col text-center top-5 lg:top-36">
+                <div class="avatar">
+                  <div class="ring-offset-base-100 w-20 rounded-full ring ring-offset-4 mb-5">
+                    <img src="https://img.freepik.com/free-photo/portrait-expressive-young-man-wearing-formal-suit_273609-6942.jpg" />
+                  </div>
+                </div>
+              <h3 class="font-bold text-2xl">Awlad Hossain</h3>
+              <span class="mb-6 font-poppins text-txt-primary-b">UIX Designer</span>
+              <p class="lg:px-28 font-poppins text-txt-primary-b">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+            </div>
+            <div class="absolute bottom-10 left-[46%] flex">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-txt-primary">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-txt-primary">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-white">
+                <path fill-rule="evenodd" d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+              </svg>                                          
+            </div>            
+            <img src="images/slider-3.jpg" class="w-fit h-fit" />
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle bg-transparent border-none text-white text-2xl hover:bg-transparent">❮</a> 
+            <a href="#slide1" class="btn btn-circle bg-transparent border-none text-white text-2xl hover:bg-transparent">❯</a>
+          </div>
+        </div>
+      </div>
+     </section>
   </main>
 
   <!-- footer section -->
